test/Fail/Issue2348-hidden-instance.err
Issue2348-hidden-instance.agda:28.8-9: error: [UnequalTerms]
The terms
  b
and
  Wrap.out w
are not equal at type B
when checking that the expression p has type P (proj-like ⦃ w ⦄)
